k8s/sabio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabio-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sabio-frontend
  template:
    metadata:
      labels:
        app: sabio-frontend
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/sabio-frontend
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr
