k8s/sabio/sabio-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabio-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabio-backend
  template:
    metadata:
      labels:
        app: sabio-backend
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/sabio-backend
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr
