k8s/sabio/sabio-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabio-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: sabio-backend
