k8s/sabio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabio-frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: sabio-frontend
