k8s/sabio/sabio-ingress.yml
# See https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sabio.netwerkdigitaalerfgoed.nl
      secretName: sabio-tls
  rules:
    - host: sabio.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabio-frontend
                port:
                  number: 80
    - host: sabio.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sabio-backend
                port:
                  number: 80
